--- a/App/package.json
+++ b/App/package.json
@@ -21,7 +21,9 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.69.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.11.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
